# ai-resume-builder

./: .gitignore  README.md  package-lock.json
backend/: .env  .env.exaple  main.py  pyproject.toml  requirements.txt
backend/api/: auth.py  profile.py
backend/core/: appwrite.py  config.py  prompts.py  resume_generator.py
backend/db/: database.py
backend/models/: resumeModel.py  userModel.py
backend/routers/: Untitled-1.json  note.txt  response.json  services.py  user.py
backend/schema/: profileSchema.py  resumeSchema.py  userschema.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: store.ts
frontend/src/components/: Footer.tsx  Header.tsx  Layout.tsx  Loader.tsx  ProtectedRoute.tsx
frontend/src/features/: serviceSlice.ts  userSlice.ts  usesSlice.ts
frontend/src/pages/: Home.tsx
frontend/src/pages/auth/: Dashboard.tsx  Login.tsx  ProfileCreate.tsx  Register.tsx
frontend/src/pages/service/: DisplayResume.tsx  Resume.tsx  ResumeCreate.tsx
frontend/src/types/: serviceTypes.ts  userTypes.ts
